# pwgen-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: cli.rs  entropy.rs  lib.rs  main.rs
src/generators/: markov.rs  mod.rs  passphrase.rs  pin.rs  secure.rs
src/output/: display.rs  mod.rs
