[package]
name = "pwgen-x"
version = "0.1.0"
edition = "2021"
description = "A feature-rich password generator with pronounceable, secure, passphrase, and PIN modes"
license = "Apache-2.0"
repository = "https://github.com/vstakhov/pwgen-rs"
homepage = "https://github.com/vstakhov/pwgen-rs"
readme = "README.md"
keywords = ["password", "generator", "security", "cli", "diceware"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
# CLI parsing
clap = { version = "4.4", features = ["derive", "color"] }

# Cryptographically secure random
rand = "0.8"

# Terminal colors and styling
owo-colors = "4.0"
console = "0.15"

# Serialization for Markov model
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Secure memory handling
zeroize = "1.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
rand_chacha = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
